[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vs_degrade"
version = "1.0.0"
description = "Add randomizable Degradations/Compression Artifacts in Vapoursynth."
authors = [{ name = "pifroggi" }]

dependencies = [
	"PyTurboJPEG",
	"numpy"
]

[project.urls]
Home-page = "https://github.com/pifroggi/vs_degrade"
Repository = "https://github.com/pifroggi/vs_degrade"
